added html code in Welcome file

--- a/invite-page/src/components/Welcome.astro
+++ b/invite-page/src/components/Welcome.astro
@@ -1,3 +1,45 @@
-<div class="h-screen w-screen text-6xl">
-	<p>test ทดสอบ</p>
+<div class="h-screen w-screen p-6">
+    <div class="h-full flex flex-col items-center justify-center text-center text-white">
+        <div class="body-image -mt-20">
+            <img
+                src="https://jastinxyz.github.io/discord-bot-landing-page-web/assets/img/relaunch_day.svg"
+                alt="Bot Image"
+                width="250"
+                height="350"
+                class="rounded-lg shadow-lg"
+            />
+        </div>
+        <div class="mt-10 space-y-6">
+            <h1 class="text-3xl md:text-4xl font-bold">Time to add [Your Bot] to your server!</h1>
+            <p class="text-sm md:text-lg text-gray-500 kanit-light">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </p>
+            <div class="flex justify-center gap-6 mt-8">
+                <div class="rounded-xl bg-blue-600 hover:bg-blue-700 transition duration-300">
+                    <button type="button" class="text-white text-lg px-6 py-3 rounded-xl font-semibold">
+                        Add to Discord
+                    </button>
+                </div>
+                <div class="rounded-xl bg-neutral-800 hover:bg-neutral-900 transition duration-300">
+                    <button type="button" class="text-white text-lg px-6 py-3 rounded-xl font-semibold">
+                        Github
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+
+<style>
+    .kanit-light {
+        font-family: "Kanit", sans-serif;
+        font-weight: 400;
+        font-style: normal;
+    }
+
+    .kanit-bold {
+        font-family: "Kanit", sans-serif;
+        font-weight: 700;
+        font-style: normal;
+    }
+</style>
