--- a/invite-page/src/layouts/Layout.astro
+++ b/invite-page/src/layouts/Layout.astro
@@ -14,7 +14,7 @@
 		<title>Bot Invite Page</title>
 	</head>
 	<body
-		class="bg-gradient-to-b from-[#16254a] to-[#090f1f] text-white kanit-semibold"
+		class="overflow-x-hidden text-white kanit-semibold"
 	>
 		<slot />
 	</body>
