added Reviews, Contact section

--- a/invite-page/src/layouts/Layout.astro
+++ b/invite-page/src/layouts/Layout.astro
@@ -13,9 +13,7 @@
 		<meta name="generator" content={Astro.generator} />
 		<title>Bot Invite Page</title>
 	</head>
-	<body
-		class="overflow-x-hidden text-white kanit-semibold"
-	>
+	<body class="overflow-x-hidden text-white kanit-semibold">
 		<slot />
 	</body>
 </html>
